--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang= "ja">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
+    <link rel="stylesheet", href="app.css"/>
   </head>
 
   <body>
     <script src="jquery.min.js"></script>
-    <script src="app.js"></script>
+    <script src="color.js"></script>
+    <div class= "box1 bg1"></div>
+    <div class= "box1 bg2"></div>
+    <div class= "box1 bg3"></div>
+    <div class= "box1 bg4"></div>
   </body>
 </html>
